--- a/StatusCal/ru.lproj/InfoPlist.strings
+++ b/StatusCal/ru.lproj/InfoPlist.strings
@@ -7,4 +7,4 @@
 */
 
 
-"NSCalendarsUsageDescription" = "Разрешения для получения данных о доступных событиях календаря";
+"NSCalendarsUsageDescription" = "Разрешение необходимо для получения данных о доступных событиях календаря";
