--- a/StatusCal/en.lproj/MainMenu.strings
+++ b/StatusCal/en.lproj/MainMenu.strings
@@ -1,4 +1,3 @@
-
 /* Root menu */
 "0GA-Pk-dni.title" = "Preferences...";
 "q73-Mh-ATb.title" = "Open calendar app";
@@ -10,24 +9,37 @@
 
 /* Settings */
 "2fn-5w-bKg.title" = "Preferences";
-"UML-DR-xC2.label" = "General";
-"nZO-xo-XSf.title" = "Launch at login";
-"ljO-fF-h9p.label" = "Time";
+
+
+/* General */
+"ljO-fF-h9p.label" = "General";
+"uDN-Mt-WSw.title" = "Launch at login";
+"4dH-ty-6og.title" = "Menu bar button style";
+"BIy-LQ-FD9.title" = "Icon and clock";
+"x17-Ih-t7A.title" = "Icon";
+"CU5-uj-WSZ.title" = "Time";
 "BDg-ZQ-zFx.title" = "Show date";
 "SJf-Zh-g4M.title" = "Show the day of the week";
-"X0B-xC-XWg.title" = "Use a 24-hours clock";
 "YBS-XV-zIF.title" = "Show the time with seconds";
+"X0B-xC-XWg.title" = "Use a 24-hours clock";
 "wHM-Vz-n6I.title" = "Show AM/PM";
+
+
+/* Calendar */
 "beM-E2-q1p.label" = "Calendar";
 "WXx-sH-f08.title" = "Show calendar events";
 
 
-/* About */
-"jdE-c0-rAD.title" = "About";
-"b6y-2e-ZIm.title" = "Version";
-"04C-Hw-fMT.title" = "© 2020 Alex Boldakov";
-"saC-ne-fH1.title" = "Project page";
-
-
 /* Updates */
-"Zcv-LP-zGA.title" = "Download latest";
+"QfE-So-YrH.label" = "Updates";
+"hpg-34-xgB.title" = "Check for updates";
+"pA8-lE-jFg.title" = "Download latest";
+"Eau-Eg-lj5.title" = "Check automatically";
+
+
+/* About */
+"FuT-Xg-5LR.label" = "About";
+"Vud-NH-E4u.title" = "Project page";
+"HiU-l8-xPu.title" = "Terms of use";
+"gKh-rC-9Fo.title" = "Privacy policy";
+"2z8-MW-p7g.title" = "© 2020 Alex Boldakov";
