--- a/StatusCal/ru.lproj/Localizable.strings
+++ b/StatusCal/ru.lproj/Localizable.strings
@@ -11,3 +11,4 @@
 "updates.checking.message" = "Проверка наличия обновлений...";
 "updates.checking.available" = "Новая версия уже доступна!";
 "updates.checking.newest" = "У Вас установлена новейшая версия";
+"updates.checking.lastcheckdate" = "Последняя проверка ";
