--- a/StatusCal/ru.lproj/MainMenu.strings
+++ b/StatusCal/ru.lproj/MainMenu.strings
@@ -1,4 +1,3 @@
-
 /* Root menu */
 "0GA-Pk-dni.title" = "Настройки";
 "q73-Mh-ATb.title" = "Открыть Календарь";
@@ -10,24 +9,37 @@
 
 /* Settings */
 "2fn-5w-bKg.title" = "Настройки";
-"UML-DR-xC2.label" = "Основные";
-"nZO-xo-XSf.title" = "Автозапуск при входе в систему";
-"ljO-fF-h9p.label" = "Время";
+
+
+/* General */
+"ljO-fF-h9p.label" = "Основные";
+"uDN-Mt-WSw.title" = "Автозапуск при входе в систему";
+"4dH-ty-6og.title" = "Стиль отображения в строке меню";
+"BIy-LQ-FD9.title" = "Иконка и часы";
+"x17-Ih-t7A.title" = "Иконка";
+"CU5-uj-WSZ.title" = "Часы";
 "BDg-ZQ-zFx.title" = "Показывать дату";
 "SJf-Zh-g4M.title" = "Показывать день недели";
-"X0B-xC-XWg.title" = "24-часовой формат";
 "YBS-XV-zIF.title" = "Показывать секунды";
+"X0B-xC-XWg.title" = "24-часовой формат";
 "wHM-Vz-n6I.title" = "Показать AM/PM";
-"beM-E2-q1p.label" = "Настройки календаря";
+
+
+/* Calendar */
+"beM-E2-q1p.label" = "Календарь";
 "WXx-sH-f08.title" = "Показывать события календарей";
 
 
-/* About */
-"jdE-c0-rAD.title" = "О приложении";
-"b6y-2e-ZIm.title" = "Версия";
-"04C-Hw-fMT.title" = "Copyright © 2020 Алексей Болдаков.";
-"saC-ne-fH1.title" = "Страница проекта";
-
-
 /* Updates */
-"Zcv-LP-zGA.title" = "Загрузить последнюю версию";
+"QfE-So-YrH.label" = "Обновления";
+"hpg-34-xgB.title" = "Проверить наличие обновлений";
+"pA8-lE-jFg.title" = "Загрузить последнюю версию";
+"Eau-Eg-lj5.title" = "Проверять автоматически";
+
+
+/* About */
+"FuT-Xg-5LR.label" = "О приложении";
+"Vud-NH-E4u.title" = "Страница проекта";
+"HiU-l8-xPu.title" = "Правила использования";
+"gKh-rC-9Fo.title" = "Политика конфиденциальности";
+"2z8-MW-p7g.title" = "© 2020 Алексей Болдаков";
